Add support for connection expiration